--- a/modern/package.json
+++ b/modern/package.json
@@ -21,12 +21,14 @@
     "maplibre-gl": "^2.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-mui-dropzone": "^4.0.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-snowfall": "^1.2.1",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
     "recharts": "^2.1.16",
