--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "proj4": "^2.7.5"
     },
     "devDependencies": {
+        "@wixc3/react-board": "^2.3.0",
         "eslint": "^4.4.1"
     },
     "scripts": {
